fix(counter): standardise number glyphs alignment

--- a/index.css
+++ b/index.css
@@ -69,6 +69,7 @@ h6 {
 
 * {
   font-family: 'Raleway', sans-serif;
+  font-feature-settings: 'lnum';
 }
 
 /* Fonts */
